# janus

./: .flake8  .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml  setup.py
docs/presentation-March2023/: beamer.sh  slides.md
docs/presentation-March2023/templates/: daresbury.beamer
examples/example_directory/: reference.history
examples/example_directory/active_learning/: simulation.lammps
examples/example_directory/cp2k_input/: example_template.inp  template.inp
examples/example_directory/lammps/: template.lmp
examples/example_directory/n2p2/: input.nn.template
examples/example_directory/scripts/: active_learning_lammps.sh  active_learning_nn.sh  analysis.ipynb  calc_distances.py  cp2k.ipynb  cp2k_all.bash  cp2k_batch_template.bash  data_pruning.ipynb  example.ipynb  example.py  nnp-train.bat  quantum_espresso.ipynb  template.bat  visualise.ipynb  workflow.ipynb
examples/m_cresol/: basis_tests.md  cresol_tests.md
examples/m_cresol/DZVP/cp2k_input/: cresol_DZVP_0.inp  cresol_DZVP_template.inp
examples/m_cresol/xyz/: extxyz_32_0  extxyz_32_1  extxyz_32_10  extxyz_32_100  extxyz_32_11  extxyz_32_12  extxyz_32_13  extxyz_32_14  extxyz_32_15  extxyz_32_16  extxyz_32_17  extxyz_32_18  extxyz_32_19  extxyz_32_2  extxyz_32_20  extxyz_32_21  extxyz_32_22  extxyz_32_23  extxyz_32_24  extxyz_32_25  extxyz_32_26  extxyz_32_27  extxyz_32_28  extxyz_32_29  extxyz_32_3  extxyz_32_30  extxyz_32_31  extxyz_32_32  extxyz_32_33  extxyz_32_34  extxyz_32_35  extxyz_32_36  extxyz_32_37  extxyz_32_38  extxyz_32_39  extxyz_32_4  extxyz_32_40  extxyz_32_41  extxyz_32_42  extxyz_32_43  (+61 more)
src/: data.py
src/cc_hdnnp/: active_learning.py  controller.py  data.py  data_operations.py  dataset.py  decomposer.py  file_manager.py  file_operations.py  lammps_input.py  sfparamgen.py  slurm_input.py  species.py  structure.py  visualisation.py
src/cc_hdnnp/data_selection/: __init__.py  clusterer.py  dataselector.py  decomposer.py  separator.py
src/cc_hdnnp/file_readers/: __init__.py  lammps_log.py  n2p2_atomenv.py  n2p2_input.py  n2p2_outputs.py
src/janus/: active_learning.py  controller.py  dataset.py  sfcalc.py  slurm_input.py  units.py
src/janus/data_selection/: __init__.py  clusterer.py  dataselector.py  decomposer.py  separator.py
src/janus/file_readers/: n2p2_scaling.py
tests/: test_active_learning.py  test_controller.py  test_data.py  test_data_operations.py  test_dataset.py  test_decomposer.py  test_file_manager.py  test_file_operations.py  test_lammps_input.py  test_sfparamgen.py  test_slurm_input.py  test_structure.py  test_visualisation.py
tests/data/: trajectory.history
tests/data/active_learning/: input.data-add
tests/data/cp2k_input/: 0.xyz  template.inp  template.sh
tests/data/cp2k_output/: n_0_cutoff_600_relcutoff_60-forces-1_0.xyz
tests/data/lammps/: lammps.data  lammps_template.md  md-npt-t340.lmp  md-npt.lmp  md-nve.lmp  md-nvt-t340.lmp  md-nvt.lmp  template.lmp
tests/data/n2p2/: atomic-env.G  energy_###.out  energy_Conf..out  energy_point.out  forces_###.out  forces_Conf..out  forces_point.out  input.data  input.data.CUR  input.data.metal_units  input.nn  input.nn.norm  input.nn.template  learning-curve.out  output.data  scaling.data  testpoints.000001.out  trainpoints.000001.out
tests/data/n2p2/no_atoms/: input.data
tests/data/qe/: UiO-66Zr-T300-p1.xyz  test-T300-p1.xyz
tests/data/scripts/: template.sh
tests/data_selection/: test_clusterer.py  test_data_selector.py  test_decomposer.py  test_separator.py
tests/file_readers/: test_lammps_log.py  test_n2p2_input.py  test_n2p2_output.py
(+32 files in other folders)
