[tool.poetry]
name = "cc_hdnnp"
version = "0.1.0"
description = ""
authors = ["Patrick Austin <patrick.austin@stfc.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<4"
ase = "^3.22.0"
ipykernel = "^6.0.3"
matplotlib = "^3.4.2"
aml = {path = "../aml", develop = true}
sklearn = "^0.0"
jupyter = "^1.0.0"
notebook = "6.4.12"
joblib = "1.2"
pillow = "9.3"
ipython = "8.10"
jupyter-core = "4.11.2"
nbconvert = "6.5.1"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.4"
coverage = {extras = ["toml"], version = "5.5"}
pytest-cov = "^2.12.1"
nox = "^2022.11.21"
black = "^21.7b0"
flake8 = "^3.9.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.4.3"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
pytest-mock = "^3.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
nox = "2022.11.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["cc_hdnnp"]

[tool.coverage.report]
show_missing = true
