[tool.poetry]
name = "janus"
version = "0.1.0"
description = ""
authors = ["Patrick Austin <patrick.austin@stfc.ac.uk>"]

[tool.poetry.dependencies]
aml = {path = "../aml", develop = true}
ase = "^3.22.0"
fonttools = ">=4.43.0"
ipykernel = "^6.0.3"
ipython = "8.10"
joblib = "1.2"
jupyter = "^1.0.0"
jupyter-core = ">=4.11.2"
Jinja2 = "^3.1.4"
matplotlib = "^3.4.2"
nbconvert = "6.5.1"
notebook = "6.4.12"
numpy = "^1.26.4"
pandas = "^2.0.0"
pillow = "^10.3.0"
pygments = ">=2.15.0"
python = ">=3.9,<3.12"
pyzmq = "25"
scipy = ">=1.10.0"
scikit-learn = "^1.5.0"
tornado = "^6.4.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
certifi = ">=2024.07.04"
coverage = {extras = ["toml"], version = "5.5"}
flake8 = "^3.9.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.4.3"
flake8-import-order = "^0.18.1"
GitPython = ">=3.1.41"
idna = "^3.7"
nox = ">=2022.11.21"
pytest = ">=7.2.0"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
requests = "^2.32.0"
safety = "^1.10.3"
setuptools = ">=70.0.0"
urllib3 = ">=2.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["janus"]

[tool.coverage.report]
show_missing = true
